--- a/app/src/main/res/layout/activity_vocabulary_test_questions.xml
+++ b/app/src/main/res/layout/activity_vocabulary_test_questions.xml
@@ -6,12 +6,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".VocabularyTestQuestionsActivity">
-    <ListView
-        android:id="@+id/listViewVocabularyTestQuestionsList"
-        android:layout_marginBottom="10dp"
+    <!--<ListView-->
+        <!--android:id="@+id/listViewVocabularyTestQuestionsList"-->
+        <!--android:layout_marginBottom="10dp"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
+    <!--</ListView>-->
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </ListView>
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/question"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/option1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/option2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/option3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/option4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
     <ListView
         android:visibility="gone"
         android:id="@+id/listViewId"
@@ -19,4 +45,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </ListView>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="144dp"
+        android:layout_marginTop="228dp"
+        android:text="Button" />
 </RelativeLayout>
