--- a/app/src/main/res/layout/activity_vocabulary_test_questions.xml
+++ b/app/src/main/res/layout/activity_vocabulary_test_questions.xml
@@ -6,34 +6,150 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".VocabularyTestQuestionsActivity">
-    <!--<ListView-->
-        <!--android:id="@+id/listViewVocabularyTestQuestionsList"-->
-        <!--android:layout_marginBottom="10dp"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent">-->
-    <!--</ListView>-->
+    <ListView
+        android:visibility="gone"
+        android:id="@+id/listViewVocabularyTestQuestionsList"
+        android:layout_marginBottom="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </ListView>
     <LinearLayout
+        android:id="@+id/questionLayout"
+        android:layout_margin="20dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/question"
+            android:textStyle="bold"
+            android:text="Question"
+            android:textColor="@color/colorPrimary"
+            android:textSize="20sp"
+            android:textAllCaps="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <RadioGroup
+            android:id="@+id/radiogroupOptions"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <RadioButton
+                android:id="@+id/radioButtonOption1"
+                android:textSize="16sp"
+                android:textColor="@color/colorPrimary"
+                android:text="option1"
+                android:textAllCaps="true"
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <RadioButton
+                android:id="@+id/radioButtonOption2"
+                android:textSize="16sp"
+                android:textColor="@color/colorPrimary"
+                android:text="option2"
+                android:textAllCaps="true"
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <RadioButton
+                android:id="@+id/radioButtonOption3"
+                android:textSize="16sp"
+                android:textColor="@color/colorPrimary"
+                android:text="option3"
+                android:textAllCaps="true"
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <RadioButton
+                android:id="@+id/radioButtonOption4"
+                android:textSize="16sp"
+                android:textColor="@color/colorPrimary"
+                android:text="option4"
+                android:textAllCaps="true"
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </RadioGroup>
+        <Button
+            android:id="@+id/submit"
+            android:background="@color/colorPrimary"
+            android:textColor="#FCFCFC"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Submit" />
+        <Button
+            android:id="@+id/viewReport"
+            android:background="@color/colorPrimary"
+            android:textColor="#FCFCFC"
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="View Report" />
+        <Button
+            android:id="@+id/next"
+            android:background="@color/colorPrimary"
+            android:textColor="#FCFCFC"
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="next" />
+        <Button
+            android:id="@+id/back"
+            android:background="@color/colorPrimary"
+            android:textColor="#FCFCFC"
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Back" />
+        <Button
+            android:id="@+id/finish"
+            android:visibility="gone"
+            android:background="@color/colorPrimary"
+            android:textColor="#FCFCFC"
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Test Finish" />
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/viewReportLayout"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:text="Your Answer"
+            android:textSize="20sp"
+            android:layout_margin="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <TextView
-            android:id="@+id/option1"
+            android:id="@+id/givenanswer"
+            android:text="Answer"
+            android:textSize="20sp"
+            android:layout_margin="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <TextView
-            android:id="@+id/option2"
+            android:text="Correct Answer"
+            android:textSize="20sp"
+            android:layout_margin="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <TextView
-            android:id="@+id/option3"
+            android:id="@+id/correctanswer"
+            android:text="Answer"
+            android:textSize="20sp"
+            android:textColor="@color/colorPrimary"
+            android:layout_margin="20dp"
+            android:background="#5BF162"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/option4"
+        <Button
+            android:id="@+id/done"
+            android:text="Done"
+            android:layout_margin="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -46,13 +162,4 @@
         android:layout_height="match_parent">
     </ListView>
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="144dp"
-        android:layout_marginTop="228dp"
-        android:text="Button" />
 </RelativeLayout>
