--- a/app/src/main/res/layout/activity_vocabulary_test_questions.xml
+++ b/app/src/main/res/layout/activity_vocabulary_test_questions.xml
@@ -121,19 +121,28 @@
         <TextView
             android:text="Your Answer"
             android:textSize="20sp"
+            android:textAllCaps="true"
+            android:textAlignment="center"
             android:layout_margin="20dp"
+            android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/givenanswer"
             android:text="Answer"
+            android:textAllCaps="true"
+            android:textAlignment="center"
             android:textSize="20sp"
+            android:textStyle="bold"
             android:layout_margin="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <TextView
             android:text="Correct Answer"
             android:textSize="20sp"
+            android:textStyle="bold"
+            android:textAllCaps="true"
+            android:textAlignment="center"
             android:layout_margin="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -141,6 +150,9 @@
             android:id="@+id/correctanswer"
             android:text="Answer"
             android:textSize="20sp"
+            android:textAllCaps="true"
+            android:textStyle="bold"
+            android:textAlignment="center"
             android:textColor="@color/colorPrimary"
             android:layout_margin="20dp"
             android:background="#5BF162"
