--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -14,7 +14,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:layout_margin="10dp"
+            android:id="@+id/textViewTotalCoins"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold"
+            android:background="#DCC8C8"
+            android:layout_gravity="right"
+            android:text="Total Coins"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
             android:text="Celepip part tests"
             android:textAlignment="center"
             android:textStyle="bold"
@@ -29,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="55dp"
         android:horizontalSpacing="40dp"
         android:numColumns="auto_fit"
         android:stretchMode="columnWidth"
