Add ons :- 1.Vocabulary Test is added. 2.Coins are getting detected. 3.Listening Test Work Started.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#F05005</color>
     <color name="colorPrimaryDark">#FF926B</color>
     <color name="colorAccent">#FF5505</color>
+    <color name="colorWhite">#FCFCFC</color>
 </resources>
