--- a/app/src/main/res/layout/activity_listening_test_question.xml
+++ b/app/src/main/res/layout/activity_listening_test_question.xml
@@ -6,21 +6,84 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ListeningTestQuestionActivity">
-    <ImageView
-        android:id="@+id/imageView"
+
+
+    <LinearLayout
+        android:id="@+id/frame1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-    <ListView
-       android:id="@+id/listView"
-        android:layout_marginBottom="10dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="9dp"
+        android:orientation="vertical"
+        android:paddingBottom="50dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="20dp"
+            android:text="Listen to the conversation. You will hear the conversation. It is about 1 to 1.5 minutes long."
+            android:textAllCaps="true"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/textViewStartTime"
+                android:text="Start Time"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content" />
+            <SeekBar
+                android:id="@+id/seekbar"
+                android:layout_width="250dp"
+                android:layout_height="30dp"
+                android:background="@color/colorWhite" />
+            <TextView
+                android:id="@+id/textViewStopTime"
+                android:text="End Time"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+
+        <ImageButton
+            android:id="@+id/buttonPlay"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:background="@color/colorPrimary"
+            android:drawablePadding="10dp"
+            android:src="@drawable/ic_play_arrow_black_24dp" />
+
+        <Button
+            android:id="@+id/buttonNext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="30dp"
+            android:background="@color/colorPrimary"
+            android:text="Next"
+            android:textColor="@color/colorWhite"
+            android:textStyle="bold" />
+    </LinearLayout>
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/t1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </ListView>
+        android:layout_height="wrap_content" />
     <ListView
         android:visibility="gone"
-        android:id="@+id/listViewId"
+        android:id="@+id/listView"
+        android:layout_marginTop="50dp"
         android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </ListView>
+
 </RelativeLayout>
