--- a/app/src/main/res/layout/activity_listening_test_question.xml
+++ b/app/src/main/res/layout/activity_listening_test_question.xml
@@ -31,6 +31,7 @@
             android:textSize="18sp"
             android:textStyle="bold" />
         <LinearLayout
+            android:layout_marginTop="30dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -50,7 +51,11 @@
                 android:layout_width="50dp"
                 android:layout_height="wrap_content" />
         </LinearLayout>
-
+        <TextView
+            android:id="@+id/percent"
+            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <ImageButton
             android:id="@+id/buttonPlay"
@@ -61,14 +66,23 @@
             android:background="@color/colorPrimary"
             android:drawablePadding="10dp"
             android:src="@drawable/ic_play_arrow_black_24dp" />
+        <ImageButton
+            android:id="@+id/buttonPause"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:background="@color/colorPrimary"
+            android:drawablePadding="10dp"
+            android:src="@drawable/ic_pause_black_24dp" />
 
         <Button
             android:id="@+id/buttonNext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="30dp"
+            android:layout_margin="50dp"
             android:background="@color/colorPrimary"
-            android:text="Next"
+            android:text="Questions"
             android:textColor="@color/colorWhite"
             android:textStyle="bold" />
     </LinearLayout>
