--- a/app/src/main/res/layout/test_list_adapter.xml
+++ b/app/src/main/res/layout/test_list_adapter.xml
@@ -11,19 +11,10 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/listeningTestListId"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:text="Id"
-            android:textColor="#F05107" />
-
-        <TextView
             android:id="@+id/listeningTestListTestNumber"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:text="Test Number"
             android:textColor="#F05107" />
@@ -32,10 +23,19 @@
             android:id="@+id/listeningTestListStartTest"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="10dp"
             android:background="#F05107"
             android:text="Start"
+            android:textColor="#FCFCFC" />
+        <Button
+            android:id="@+id/reviewTest"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="10dp"
+            android:background="#F05107"
+            android:text="Review"
             android:textColor="#FCFCFC" />
     </LinearLayout>
 
