--- a/app/src/main/res/layout/test_adapter_listeningtestpart1.xml
+++ b/app/src/main/res/layout/test_adapter_listeningtestpart1.xml
@@ -59,6 +59,8 @@
             android:src="@drawable/ic_play_arrow_black_24dp" />
 
         <RadioGroup
+            android:id="@+id/frame1"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp">
@@ -71,6 +73,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="50dp"
                 android:layout_marginEnd="50dp" />
+
 
             <RadioButton
                 android:id="@+id/radioButtonOption2"
@@ -98,6 +101,74 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="50dp"
                 android:layout_marginEnd="50dp" />
+        </RadioGroup>
+        <RadioGroup
+            android:id="@+id/frame2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <RadioButton
+                    android:id="@+id/radio1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <ImageView
+                    android:id="@+id/imageViewRadio1"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <RadioButton
+                    android:id="@+id/radio02"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <ImageView
+                    android:id="@+id/imageViewRadio2"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <RadioButton
+                    android:id="@+id/radio03"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <ImageView
+                    android:id="@+id/imageViewRadio3"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <RadioButton
+                    android:id="@+id/radio4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <ImageView
+                    android:id="@+id/imageViewRadio4"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp" />
+            </LinearLayout>
         </RadioGroup>
     </LinearLayout>
 
@@ -152,6 +223,43 @@
 
     <Button
         android:visibility="gone"
+        android:id="@+id/buttonNextQuestion6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/buttonFinish"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="450dp"
+        android:layout_marginBottom="80dp"
+        android:background="@color/colorPrimary"
+        android:text="Next Question"
+        android:textColor="@color/colorWhite" />
+    <Button
+        android:visibility="gone"
+        android:id="@+id/buttonNextQuestion7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/buttonFinish"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="450dp"
+        android:layout_marginBottom="80dp"
+        android:background="@color/colorPrimary"
+        android:text="Next Question"
+        android:textColor="@color/colorWhite" />
+    <Button
+        android:visibility="gone"
+        android:id="@+id/buttonNextQuestion8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/buttonFinish"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="450dp"
+        android:layout_marginBottom="80dp"
+        android:background="@color/colorPrimary"
+        android:text="Next Question"
+        android:textColor="@color/colorWhite" />
+
+    <Button
+        android:visibility="gone"
         android:id="@+id/buttonFinish"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -162,15 +270,8 @@
         android:text="Test Finish"
         android:textColor="@color/colorWhite" />
 
-
     <ListView
         android:visibility="gone"
-        android:id="@+id/correctanswer"
-        android:layout_width="match_parent"
-        android:layout_height="254dp">
-    </ListView>
-
-    <ListView
         android:id="@+id/userAnswer"
         android:layout_width="match_parent"
         android:layout_height="200dp"
