--- a/app/src/main/res/layout/activity_listening_test_question.xml
+++ b/app/src/main/res/layout/activity_listening_test_question.xml
@@ -39,16 +39,22 @@
             <TextView
                 android:id="@+id/textViewStartTime"
                 android:text="Start Time"
+                android:gravity="left"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content" />
             <SeekBar
                 android:id="@+id/seekbar"
-                android:layout_width="250dp"
+                android:layout_width="200dp"
+                android:gravity="center"
                 android:layout_height="30dp"
+                android:layout_marginLeft="40dp"
                 android:background="@color/colorWhite" />
             <TextView
                 android:id="@+id/textViewStopTime"
                 android:text="End Time"
+                android:gravity="right"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="0dp"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content" />
         </LinearLayout>
@@ -63,6 +69,8 @@
             android:layout_height="wrap_content" />
         <ImageButton
             android:id="@+id/buttonPlay"
+            android:clickable="true"
+            android:state_pressed="true"
             android:layout_width="100dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
