--- a/app/src/main/res/layout/test_adapter_listeningtestpart1.xml
+++ b/app/src/main/res/layout/test_adapter_listeningtestpart1.xml
@@ -10,8 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="53dp"
+        android:layout_marginStart="-6dp"
+        android:layout_marginTop="17dp"
         android:orientation="horizontal">
 
         <TextView
@@ -39,31 +39,34 @@
             android:text="End Time" />
     </LinearLayout>
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="140dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="82dp"
         android:orientation="vertical">
 
         <ImageButton
             android:id="@+id/buttonPlay"
             android:layout_width="100dp"
             android:layout_height="50dp"
+            android:layout_alignStart="@+id/buttonNextQuestion1"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center"
-            android:layout_marginTop="50dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="5dp"
             android:background="@color/colorPrimary"
+            android:layout_gravity="center"
             android:src="@drawable/ic_play_arrow_black_24dp" />
 
         <RadioGroup
             android:id="@+id/frame1"
-            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="20dp"
+            android:visibility="gone">
 
             <RadioButton
                 android:id="@+id/radioButtonOption1"
@@ -102,15 +105,16 @@
                 android:layout_marginStart="50dp"
                 android:layout_marginEnd="50dp" />
         </RadioGroup>
+
         <RadioGroup
             android:id="@+id/frame2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
 
                 <RadioButton
                     android:id="@+id/radio1"
@@ -126,10 +130,10 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
 
                 <RadioButton
-                    android:id="@+id/radio02"
+                    android:id="@+id/radio2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
@@ -142,10 +146,10 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
 
                 <RadioButton
-                    android:id="@+id/radio03"
+                    android:id="@+id/radio3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
@@ -154,10 +158,11 @@
                     android:layout_width="60dp"
                     android:layout_height="60dp" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
 
                 <RadioButton
                     android:id="@+id/radio4"
@@ -172,8 +177,20 @@
         </RadioGroup>
     </LinearLayout>
 
+    <Button
+        android:id="@+id/buttonNextQuestion1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/buttonFinish"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="450dp"
+        android:layout_marginBottom="80dp"
+        android:background="@color/colorPrimary"
+        android:text="Next Question"
+        android:textColor="@color/colorWhite" />
 
     <Button
+        android:visibility="gone"
         android:id="@+id/buttonNextQuestion2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -255,7 +272,7 @@
         android:layout_marginTop="450dp"
         android:layout_marginBottom="80dp"
         android:background="@color/colorPrimary"
-        android:text="Next Question"
+        android:text="Test Finish"
         android:textColor="@color/colorWhite" />
 
     <Button
@@ -267,19 +284,8 @@
         android:layout_marginTop="450dp"
         android:layout_marginBottom="80dp"
         android:background="@color/colorPrimary"
-        android:text="Test Finish"
+        android:text="Submit Answer"
         android:textColor="@color/colorWhite" />
-
-    <ListView
-        android:visibility="gone"
-        android:id="@+id/userAnswer"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="13dp"
-        android:layout_marginBottom="398dp"></ListView>
-
 
 
 </RelativeLayout>
