--- a/app/src/main/res/layout/test_adapter_listeningtestpart2.xml
+++ b/app/src/main/res/layout/test_adapter_listeningtestpart2.xml
@@ -11,7 +11,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="53dp"
+        android:layout_marginTop="27dp"
         android:orientation="horizontal">
 
         <TextView
@@ -44,7 +44,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="140dp"
+        android:layout_marginStart="-2dp"
+        android:layout_marginTop="84dp"
         android:orientation="vertical">
 
         <ImageButton
@@ -54,7 +55,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="5dp"
             android:background="@color/colorPrimary"
             android:src="@drawable/ic_play_arrow_black_24dp" />
 
