--- a/app/src/main/res/layout/test_adapter_listeningtestpart2.xml
+++ b/app/src/main/res/layout/test_adapter_listeningtestpart2.xml
@@ -102,6 +102,17 @@
         </RadioGroup>
     </LinearLayout>
 
+    <!--<Button-->
+        <!--android:id="@+id/buttonNextQuestion1"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignStart="@+id/buttonFinish"-->
+        <!--android:layout_marginStart="140dp"-->
+        <!--android:layout_marginTop="350dp"-->
+        <!--android:layout_marginBottom="80dp"-->
+        <!--android:background="@color/colorPrimary"-->
+        <!--android:text="Next Question"-->
+        <!--android:textColor="@color/colorWhite" />-->
 
     <Button
         android:id="@+id/buttonNextQuestion2"
