Add ons :- 1.Vocabulary Test is added. 2.Coins are getting detected. 3.Listening Test Work Started Part1 And Part2 Done. 4.Answer Uploading API is for Listening Test Part 1 ,Part 2 and  Part 3 is added..

--- a/app/src/main/res/layout/activity_listening_test_question.xml
+++ b/app/src/main/res/layout/activity_listening_test_question.xml
@@ -103,7 +103,6 @@
     <ListView
         android:visibility="gone"
         android:id="@+id/listView"
-        android:layout_marginTop="50dp"
         android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -189,6 +188,37 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/frame3"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <VideoView
+            android:id="@+id/videoView"
+            android:layout_width="match_parent"
+            android:layout_height="300dp" />
+
+        <Button
+            android:visibility="gone"
+            android:id="@+id/buttonQuestions"
+            android:clickable="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="50dp"
+            android:background="@color/colorPrimary"
+            android:text="Questions"
+            android:textColor="@color/colorWhite"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <ProgressBar
+        android:visibility="gone"
+        android:id="@+id/progrss"
+        android:layout_width="119dp"
+        android:layout_height="109dp"
+        android:layout_marginStart="130dp"
+        android:layout_marginTop="80dp" />
 
 
 </RelativeLayout>
