--- a/app/src/main/res/layout/test_adapter_listeningtestpart5.xml
+++ b/app/src/main/res/layout/test_adapter_listeningtestpart5.xml
@@ -83,6 +83,43 @@
 
         </Spinner>
 
+        <TextView
+            android:id="@+id/question6"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <Spinner
+            android:id="@+id/optionsquestion6"
+            android:layout_margin="10dp"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content">
+
+        </Spinner>
+        <TextView
+            android:id="@+id/question7"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <Spinner
+            android:id="@+id/optionsquestion7"
+            android:layout_margin="10dp"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content">
+
+        </Spinner>
+        <TextView
+            android:id="@+id/question8"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <Spinner
+            android:id="@+id/optionsquestion8"
+            android:layout_margin="10dp"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content">
+
+        </Spinner>
+
         <Button
             android:id="@+id/buttonSubmitTest"
             android:layout_width="wrap_content"
@@ -92,6 +129,7 @@
             android:background="@color/colorPrimary"
             android:text="Submit"
             android:textColor="@color/colorWhite" />
+
     </LinearLayout>
 
     <TextView
