--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -7,174 +7,183 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".UserDashboard.Dashboard"
+    android:background="@drawable/dashboardbackgroud"
     tools:showIn="@layout/app_bar_dashboard">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <ImageView
+        android:id="@+id/imageViewScreenSaver"
+        android:src="@drawable/screensaverdashboard"
+        android:scaleType="fitXY"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/textViewTotalCoins"
-            android:layout_marginEnd="10dp"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/colorPrimary"
-            android:textStyle="bold"
-            android:background="#DCC8C8"
-            android:layout_gravity="right"
-            android:text="Total Coins"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:text="Celepip part tests"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            android:textSize="25sp"
-            android:textAllCaps="true"
+        android:layout_height="match_parent"/>
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+            android:layout_height="wrap_content">
+            <TextView
+                android:text="Celpip part tests"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:textSize="25sp"
+                android:background="@color/cardview_shadow_start_color"
+                android:textColor="@color/colorPrimary"
+                android:textAllCaps="true"
+                android:layout_margin="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
 
-    <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="55dp"
-        android:horizontalSpacing="40dp"
-        android:numColumns="auto_fit"
-        android:stretchMode="columnWidth"
-        android:useDefaultMargins="true"
-        android:verticalSpacing="40dp">
-
-        <ImageView
-            android:id="@+id/listeningimage"
-            android:layout_height="match_parent"
-            android:layout_row="0"
-            android:layout_column="2"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:src="@drawable/listening" />
-
-
-        <ImageView
-            android:id="@+id/readingimage"
-            android:layout_height="match_parent"
-            android:layout_row="2"
-            android:layout_column="2"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:src="@drawable/reading" />
-
-        <ImageView
-            android:id="@+id/speakingimage"
-            android:layout_height="match_parent"
-            android:layout_row="0"
-            android:layout_column="5"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:src="@drawable/speaking" />
-
-        <ImageView
-            android:id="@+id/writingimage"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:layout_row="2"
-            android:layout_column="5"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:src="@drawable/writingtests" />
-
-
-    </GridLayout>
-
-    <LinearLayout
-        android:layout_marginTop="280dp"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
+        <GridLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Competitive English Section"
-            android:textAlignment="center"
-            android:textAllCaps="true"
-            android:textSize="25sp"
-            android:textStyle="bold" />
-    </LinearLayout>
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="75dp"
+            android:layout_marginStart="30dp"
+            android:horizontalSpacing="40dp"
+            android:numColumns="auto_fit"
+            android:stretchMode="columnWidth"
+            android:useDefaultMargins="true"
+            android:verticalSpacing="40dp">
 
-    <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="346dp"
-        android:horizontalSpacing="40dp"
-        android:numColumns="auto_fit"
-        android:stretchMode="columnWidth"
-        android:useDefaultMargins="true"
-        android:verticalSpacing="40dp">
+            <ImageView
+                android:id="@+id/listeningimage"
+                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_row="0"
+                android:layout_column="2"
+                android:layout_gravity="center"
+                android:layout_marginStart="50dp"
+                android:src="@drawable/listening" />
 
-        <ImageView
-            android:id="@+id/vocabularyimage"
-            android:layout_height="match_parent"
-            android:layout_row="0"
-            android:layout_column="2"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:src="@drawable/vocabularytests" />
+            <ImageView
+                android:id="@+id/readingimage"
+                android:layout_height="match_parent"
+                android:layout_row="2"
+                android:layout_column="2"
+                android:layout_gravity="center"
+                android:layout_marginStart="50dp"
 
+                android:src="@drawable/reading" />
 
-        <ImageView
-            android:id="@+id/spottingerrorimage"
-            android:layout_height="match_parent"
-            android:layout_row="2"
-            android:layout_column="2"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:src="@drawable/spottingerrortests" />
+            <ImageView
+                android:id="@+id/speakingimage"
+                android:layout_height="match_parent"
+                android:layout_row="0"
+                android:layout_column="5"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:src="@drawable/speaking" />
 
-        <ImageView
-            android:id="@+id/dictationimage"
-            android:layout_height="match_parent"
-            android:layout_row="0"
-            android:layout_column="5"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:src="@drawable/dictationlevellist" />
-
-        <ImageView
-            android:id="@+id/comprehensionimage"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:layout_row="2"
-            android:layout_column="6"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:src="@drawable/comprehensiontext" />
-
-        <ImageView
-            android:id="@+id/rearrangeimage"
-            android:layout_height="match_parent"
-            android:layout_row="2"
-            android:layout_column="5"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:src="@drawable/rearrange" />
-
-        <ImageView
-            android:id="@+id/fillintheblanksimage"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:layout_row="0"
-            android:layout_column="6"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:src="@drawable/fillintheblanks" />
+            <ImageView
+                android:id="@+id/writingimage"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:layout_row="2"
+                android:layout_column="5"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:src="@drawable/writingtests" />
 
 
-    </GridLayout>
+        </GridLayout>
+
+        <LinearLayout
+            android:layout_marginTop="300dp"
+            android:orientation="vertical"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Competitive English Section"
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimary"
+                android:background="@color/cardview_shadow_start_color"
+                android:textAllCaps="true"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <GridLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="370dp"
+            android:horizontalSpacing="40dp"
+            android:numColumns="auto_fit"
+            android:stretchMode="columnWidth"
+            android:useDefaultMargins="true"
+            android:verticalSpacing="40dp">
+
+            <ImageView
+                android:id="@+id/vocabularyimage"
+                android:layout_height="match_parent"
+                android:layout_row="0"
+                android:layout_column="2"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:src="@drawable/vocabularytests" />
+
+
+            <ImageView
+                android:id="@+id/spottingerrorimage"
+                android:layout_height="match_parent"
+                android:layout_row="2"
+                android:layout_column="2"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:src="@drawable/spottingerrortests" />
+
+            <ImageView
+                android:id="@+id/dictationimage"
+                android:layout_height="match_parent"
+                android:layout_row="0"
+                android:layout_column="5"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:src="@drawable/dictationlevellist" />
+
+            <ImageView
+                android:id="@+id/comprehensionimage"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:layout_row="2"
+                android:layout_column="6"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:src="@drawable/comprehensiontext" />
+
+            <ImageView
+                android:id="@+id/rearrangeimage"
+                android:layout_height="match_parent"
+                android:layout_row="2"
+                android:layout_column="5"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:src="@drawable/rearrange" />
+
+            <ImageView
+                android:id="@+id/fillintheblanksimage"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:layout_row="0"
+                android:layout_column="6"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:src="@drawable/fillintheblanks" />
+
+
+        </GridLayout>
+    </RelativeLayout>
+
 
 
 </RelativeLayout>
