--- a/app/src/main/res/layout/activity_vocabulary_test_questions.xml
+++ b/app/src/main/res/layout/activity_vocabulary_test_questions.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VocabularyTestQuestionsActivity">
+    tools:context=".Tests.VocabularyTest.VocabularyTestQuestionsActivity">
     <ListView
         android:visibility="gone"
         android:id="@+id/listViewVocabularyTestQuestionsList"
