--- a/app/src/main/res/layout/app_bar_vocabulary__tests.xml
+++ b/app/src/main/res/layout/app_bar_vocabulary__tests.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Tests.VOCABULARY_TESTS">
+    tools:context=".Tests.VocabularyTest.VOCABULARY_TESTS">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
