--- a/app/src/main/res/layout/content_reading.xml
+++ b/app/src/main/res/layout/content_reading.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".Tests.WRITING"
+    tools:context=".Tests.WritingTest.WRITING"
     tools:showIn="@layout/app_bar_writing">
 
     <ListView
